welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:19: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:22: error: expected start of definition
	override def forward()  {
                 ^Diagonal:25: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:28: error: expected start of definition
	override def backward() {
                 ^Diagonal:31: error: Unmatched closing brace '}' ignored here
}
^